# GfxDemo

./: .gitignore  CMakeLists.txt  GfxCamera.cc  GfxCamera.h  GfxConfig.h  GfxDemo.cc  GfxDemo.h  GfxInput.cc  GfxInput.h  GfxModel.cc  GfxModel.h  GfxShader.cc  GfxShader.h  calc.h  utility.cc  utility.h
asset/shaders/: mesh_with_texture.glsl
asset/sphere/: ico.mtl
asset/woman/: woman.mtl
lib/glad-0.1.30/: CMakeLists.txt
lib/glad-0.1.30/include/glad/: glad.h
lib/glad-0.1.30/src/: glad.c
lib/tinyobjloader-1.0.7/: CMakeLists.txt
